package be.immoconnect.entite;

/** Statuts de publication d'un article du blog (règle RA4 : visible seulement si publié). */
public enum StatutArticle {
    brouillon, publie, archive
}
