package be.immoconnect.entite;

/** Cycle de vie d'un rendez-vous (diagramme d'état-transition, règle RA1). */
public enum StatutRendezVous {
    demande, confirme, annule, honore
}
